--- a/client/styles/_race.scss
+++ b/client/styles/_race.scss
@@ -39,6 +39,10 @@
         width: 36px;
       }
 
+      .handle {
+        flex: 1;
+      }
+
       .time {
         padding-right: 12px;
       }
